- GCOMEventBin::ontime(double&)
- GCOMResponse::write(GFitsImageFloat&)
- GCOMTim(GGti&)
- GLATObservation(GXmlElement&)
- GLATLtCube::read(GFits&)
- GLATLtCube::write(GFits&)
- GLATEfficiency::pars()
- GMWLDatum(GEnergy&, GEnergy&, double&, double&)
- GMWLDatum::energy(GEnergy&)
- GMWLDatum::energy_err(GEnergy&)

The following methods have been removed:
- GSkyRegionMap::filename()

The following methods have been renamed:
- GPhoton::mc_id() from GPhoton::mcid()
- GCTAEdisp::ereco_bounds() from GCTAEdisp::ebounds_obs()
- GCTAEdisp::etrue_bounds() from GCTAEdisp::ebounds_src()

The arguments for the following methods have been changed:
- GCTAOnOffObservation(GCTAObservation&, GModelSpatial&, GEbounds&, GEbounds&, GSkyRegions&, GSkyRegions&, bool&)
- GCTAModelRadial::mc(GRan&)
- GCTAEdisp::operator(GEnergy&, GEnergy&, double&, double&, double&, double&)
- GCTAEdisp::mc(GRan&, GEnergy&, double&, double&, double&, double&)
- GCTAResponseIrf::edisp(GEnergy&, GEnergy&, double&, double&, double&, double&)
- GLATAeff(GFits&, std::string&)
- GLATEdisp(GFits&, std::string&)
- GLATPsf(GFits&, std::string&)


The return value of the following methods has been changed:
- none

All at() methods were removed from the Python interface.


3. Configuration
-----------------
Keep existing library path in installation script on Mac OS X (#2420).

GammaLib classes can now be pickled from Python (#1938).


4. Application module
---------------------
Add GLog::buffer() method that returns the content of the logger buffer.

A GApplicationPars::syspfiles() setter and getter method was added to allow the
specification of an application specific system parameter file path. If such a
file path is specified, the loading of the application parameters needs to be
redone by the client. The GApplicationPars::load() methods now gives priority
to a parameter file found in the syspfiles folder and updates parameter values
using the parameter file found in the user's pfiles folder. In that way, any