@@ -137,6 +137,7 @@ The following methods have been added:
 
 The following methods have been removed:
 - GSkyRegionMap::filename()
+- GCTAEventList::irf_cache()
 
 The following methods have been renamed:
 - GPhoton::mc_id() from GPhoton::mcid()
@@ -316,8 +317,8 @@ CTA. The response cache is now used in GCTAResponse::irf(GEvent&, GSource&,
 GObservation&) and in GCTAResponseIrf::nroi(GModelSky&, GEnergy&, GTime&,
 GEnergy&, GTime&, GObservation&) in case that the spatial model has no free
 parameters. This means that now all other spatial models with frozen parameters
-will be cached. The use of the cache can be toggled by internal data members
-(#2715).
+will be cached. The use of the cache can be toggled by internal data members.
+The IRF cache was removed from GCTAEventList since it is no longer used (#2715).
 
 GCTABackground3D::init_mc_cache now pre-computes the Monte Carlo cache at energy
 nodes of the background cube, and in addition, inserts 8 logarithmically spaced
